# otoolrecursive

./: CMakeLists.txt  README.md  main.cpp
